Minor style fix to align collapse arrows

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -180,7 +180,7 @@ body {
                 background-repeat: no-repeat;
                 background-size: contain;
                 position: absolute;
-                right: 0px;
+                right: -8px;
                 top: calc(50% - 15px);
                 display: block;
                 width: 30px;
